--- a/src/style.css
+++ b/src/style.css
@@ -25,7 +25,32 @@
       page-break-before: always;
       margin-top: 30px;
     }
-   
+    .page{
+        margin-top:10px;
+        /*display: flex;*/
+        /*justify-content: space-around;*/
+    }
+    .github{
+        display: flex;
+        /*flex-direction: column;*/
+    }
+    .github>.github-png  {
+        width:2.5em;
+    }
+    .github>.github-name{
+     margin-left:0.5em ;
+    }
+    .juejin{
+        display: flex;
+        /*flex-direction: column;*/
+    }
+    .juejin>.juejin-png  {
+        width:1.2em;
+        margin-left: 0.7em;
+    }
+    .juejin>.juejin-name{
+     margin-left:1em ;
+    }
    
     body {}
 
@@ -44,6 +69,11 @@
       font-weight: normal;
     }
 
+    h5{
+        margin-left: 1em;
+        font-size: 15px;
+    }
+
     ol,
     ul {
       list-style: none;
@@ -56,6 +86,11 @@
       color: #f60;
     }
 
+    em{
+        font-weight: normal;
+        color: #0059ff;
+    }
+
     a {
       color: rgb(163, 146, 146);
       text-decoration: none;
@@ -63,7 +98,9 @@
     }
     .ab{
         color: #2775b6;
-border-bottom: 1px solid;
+        border-bottom: 1px solid;
+        word-wrap:break-word;
+        width: min-content;
     }
 
     time{
@@ -91,12 +128,14 @@ border-bottom: 1px solid;
     .bio {
       position: relative;
     }
+    .experience{
 
-    .bio img {
-      position: absolute;
-      top: 0;
-      right: 0;
-      left: 0;
+
+    }
+
+    .sub-title{
+        font-size: 18px;
+        color: #333;
     }
 .mimg{
     margin-left: 150px;
@@ -120,7 +159,7 @@ border-bottom: 1px solid;
     }
 
     .projects>ol>li {
-      margin-bottom: 24px;
+      margin-top: 12px;
     }
 
     .projects>ol>li>header {
