--- a/src/style.css
+++ b/src/style.css
@@ -50,7 +50,7 @@
 
     .page2 {
       page-break-before: always;
-      margin-top: 30px;
+      /*margin-top: 30px;*/
     }
     .page{
         /*margin-top:10px;*/
